syntax = "proto3";

package archive_isolated;

service ArchiveIsolatedService {
    rpc Filter (FilterRequest) returns (Reply) {}
    rpc Save (SaveRequest) returns (Reply) {}
    rpc Get (GetRequest) returns (Reply) {}
    rpc Update (UpdateRequest) returns (Reply) {}
    rpc Remove (RemoveRequest) returns (Reply) {}

    rpc TransferIn (TransferInRequest) returns (Reply) {}
}

message FilterRequest { string filter = 1; }

message SaveRequest {
    string uuid = 1;
    string sn = 2;
    string sn_repeal = 3;
    string id_card = 4;
    string name = 5;
    string doc = 6;
}

message GetRequest { uint32 id = 1; string uuid = 2; }

message UpdateRequest {
    uint32 id = 1;
    string uuid = 2;
    string sn = 3;
    string sn_repeal = 4;
    string id_card = 5;
    string name = 6;
    string doc = 7;
}

message RemoveRequest { uint32 id = 1; string uuid = 2; }

message TransferInRequest {
    uint32 id = 1;
    string uuid = 2;
    string sn_repeal = 3;
    string id_card = 4;
    string name = 5;
    string doc = 6;
}

message Reply { string data = 1; }
